# panda-files

./: .gitignore  CMakeLists.txt  README.md  panda-files.desktop
cmake/: FindGLIB.cmake
data/: panda-applications.menu
src/: CMakeLists.txt  application.cpp  application.h  applicationadaptor.cpp  applicationadaptor.h  bulkrename.cpp  bulkrename.h  desktopentrydialog.cpp  desktopentrydialog.h  desktopwindow.cpp  desktopwindow.h  launcher.cpp  launcher.h  main.cpp  mainwindow.cpp  mainwindow.h  org.panda.files.xml  settings.cpp  settings.h  tabbar.cpp  tabbar.h  tabpage.cpp  tabpage.h  view.cpp  view.h  viewframe.cpp  viewframe.h  xdgdir.cpp  xdgdir.h
src/lib/: #CMakeLists.txt#  .#CMakeLists.txt  CMakeLists.txt  app-chooser-dialog.ui  appchooserdialog.cpp  appmenuview.cpp  createnewmenu.cpp  execfiledialog.cpp  execfiledialog_p.h  file-operation-dialog.ui  file-props.ui  filedialog.cpp  filedialog.ui  filemenu.cpp  filemenu.h  fileoperation.cpp  fileoperation.h  filepropsdialog.h  folderitemdelegate.cpp  folderitemdelegate.h  foldermenu.cpp  foldermenu.h  foldermodel.cpp  folderview.cpp  libfmqtglobals.h  mount-operation-password.ui  mountoperationpassworddialog.cpp  pathbar.cpp  pathbar.h  pathbar_p.h  placesmodel.cpp  placesmodel.h  placesview.cpp  placesview.h  sidepane.cpp  sidepane.h  utilities.cpp  utilities.h
src/lib/core/: archiver.cpp  basicfilelauncher.cpp  fileinfo.cpp  templates.cpp  terminal.cpp  thumbnailjob.cpp  trashjob.cpp
src/lib/core/vfs/: vfs-menu.c
